# SigilWars

./: README.md  pyproject.toml
docs/: Game Design Document.md
src/sigilwars/: __init__.py  cards.py  core.py  effects.py  magic.py
